# iceicle

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CMakeLists.txt  LICENSE  asan_suppresions.txt  imgui.ini  readme.md
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  explicit_convergence_study.md  index.rst  install.md  requirements.txt  sine_diffusion_1d_study.md
doc/api/: LinearFormSolver.md
doc/design/: fespan.md
doc/study1d/: plot.py
examples/conservation_law/: adv_mdg.lua  burgers_manufactured.lua  entropy_wave.lua  flatplate.lua  gmsh_example.lua  gmsh_st_burgers.lua  iceicle.lua  isentropic_vortex.lua  kercher_burgers_explicit.lua  mdg_inviscid_burgers.lua  mdgbl_1d.lua  mdgbl_1d_2cell.lua  miniapp  mixed_uniform_example.lua  non_uniform_sine_diffusion.lua  ns_conservation_test.lua  ns_manufactured_1.lua  ns_manufactured_2.lua  sine_diffusion.lua  sod_explicit.lua  st_burgers_mdg.lua  st_burgers_single_domain.lua  st_burgers_tri_mdg.lua  steady_2d_heat.lua  test3.lua  test_partitioning.lua
examples/gmsh_meshes/: flatplate.py  naca.msh  naca.py  qqs_cavrmsh.msh  qqs_diskrmsh.msh  qqs_simplefaces.msh  qqs_subdiv.msh  quadqs_statistics.json  smol.py  st_burgers.py  untitled.geo
examples/heat_equation/: bl_1d.lua  explicit.lua  iceicle.lua  linear.lua  mdg_bl.lua  miniapp
examples/ns_manufactured/: iceicle.lua  miniapp
scripts/: combine_multiprocess_dat.sh  general_cgns_silvester_indices.py  simplex_test_vis.py
shaders/: arrow2d_shader.frag  arrow2d_shader.geom  arrow2d_shader.vert  bounding_box_scale.vert  domn_shader.frag  face_shader_2d.frag  shape_shader.frag  shape_shader.vert  triangle2d.frag  triangle2d.vert
src/: CMakeLists.txt
src/FiniteElement/: CMakeLists.txt  mesh.cpp  segment_mesh.cpp
src/FiniteElement/include/iceicle/: fe_definitions.hpp  fe_enums.hpp  fe_utils.hpp
src/FiniteElement/include/iceicle/basis/: basis.hpp  dof_mapping.hpp  lagrange.hpp  lagrange_1d.hpp  legendre.hpp  tensor_product.hpp
src/FiniteElement/include/iceicle/disc/: SpacetimeConnection.hpp  bc_lua_interface.hpp  bilinear_integrators.hpp  burgers.hpp  conservation_law.hpp  evaluation.hpp  heat_eqn.hpp  l2_error.hpp  navier_stokes.hpp  ns_lua_interface.hpp  projection.hpp
src/FiniteElement/include/iceicle/element/: TraceSpace.hpp  evaluation.hpp  finite_element.hpp  reference_element.hpp
src/FiniteElement/include/iceicle/fe_function/: cg_map.hpp  cglayout.hpp  component_span.hpp  dglayout.hpp  dofarray.hpp  el_layout.hpp  fe_function.hpp  fespan.hpp  geo_layouts.hpp  layout_enums.hpp  layout_right.hpp  nodal_fe_function.hpp  node_set_layout.hpp  node_subset.hpp  opengl_fe_function_utils.hpp  restart.hpp  trace_layout.hpp
src/FiniteElement/include/iceicle/fespace/: fespace.hpp  fespace_lua_interface.hpp
src/FiniteElement/include/iceicle/geometry/: element_utils.hpp  face.hpp  face_utils.hpp  geo_element.hpp  geo_primitives.hpp  geometry_enums.hpp  hypercube.hpp  hypercube_element.hpp  hypercube_element_utility.hpp  hypercube_face.hpp  point.hpp  point_face.hpp  polytope_element.hpp  segment.hpp  simplex_element.hpp  transformations_table.hpp
src/FiniteElement/include/iceicle/mesh/: gmsh_utils.hpp  mesh.hpp  mesh_geometry.hpp  mesh_lua_interface.hpp  mesh_partition.hpp  mesh_utils.hpp  segment_mesh.hpp
src/FiniteElement/include/iceicle/physics/: boundary_data.hpp
src/FiniteElement/include/iceicle/quadrature/: HypercubeGaussLegendre.hpp  QuadratureRule.hpp  SimplexQuadrature.hpp  quadrules_1d.hpp
src/FiniteElement/include/iceicle/solvers/: element_linear_solve.hpp
src/FiniteElement/include/iceicle/transformations/: HypercubeElementTransformation.hpp  HypercubeTransformUtility.hpp  HypercubeTransformations.hpp  SegmentTransformation.hpp  SimplexElementTransformation.hpp  abstract_transformation.hpp  polytope_transformations.hpp  transformation_concepts.hpp  transformation_utils.hpp
src/iceicle/: CMakeLists.txt  conservation_law.cpp  heat_eqn_miniapp.cpp  iceicle_1d.cpp  mdgbl_1d.cpp  mesh_visualizer.cpp  ns_manufactured.cpp  sine_diffusion_1d.cpp
src/io/: CMakeLists.txt  pvd_writer.cpp
src/io/include/iceicle/: dat_writer.hpp  pvd_writer.hpp  vtk_writer.hpp  writer.hpp
src/math/: CMakeLists.txt
src/math/include/iceicle/: math_utils.hpp
src/solvers/: CMakeLists.txt
src/solvers/include/iceicle/: corrigan_lm.hpp  element_linear_solve.hpp  explicit_euler.hpp  explicit_utils.hpp  fd_utils.hpp  form_dense_jacobian.hpp  form_hypre_jacobian.hpp  form_hypre_residual.hpp  form_petsc_jacobian.hpp  form_residual.hpp  hypre_interface.hpp  initialization.hpp  jacobian_utils.hpp  linear_form_solver.hpp  matrix_free_newton_krylov.hpp  mdg_utils.hpp  nonlinear_solver_utils.hpp  petsc_gn_linesearch.hpp  petsc_interface.hpp  petsc_newton.hpp  solvers_lua_interface.hpp  ssp_rk3.hpp  tvd_rk3.hpp
src/util/: CMakeLists.txt  load_shaders.cpp  opengl_drawer.cpp
src/util/include/: build_config.hpp
src/util/include/iceicle/: algo.hpp  anomaly_log.hpp  bitset.hpp  build_config.hpp  crs.hpp  iceicle_mpi_utils.hpp  load_shaders.hpp  lua_utils.hpp  mpi_type.hpp  opengl_drawer.hpp  opengl_memory.hpp  opengl_utils.hpp  program_args.hpp  string_utils.hpp  tmp_utils.hpp
src/util/include/iceicle/linalg/: linalg_utils.hpp  ortho.hpp  qr.hpp
src/vtk/: CMakeLists.txt  vis_polytopes.cpp
test/: CMakeLists.txt  SimplexTransformExample.cpp  TestFESpace.cpp  TestFespan.cpp  TestHypercubeFE.cpp  TestHypercubeFace.cpp  TestHypercubeTransform.cpp  TestQuadrature1d.cpp  TestSimplexFE.cpp  TestSimplexLagrange.cpp  TestSimplexQuadrature.cpp  TestSimplexTransform.cpp  TestTraceSpace.cpp  element_visualizer.cpp  opengl_tester.cpp  test_evaluation.cpp  test_face_utils.cpp  test_felib_main.cpp  test_geometry.cpp  test_hypre_interface.cpp  test_jacobian_utils.cpp  test_linalg.cpp  test_mesh.cpp  test_mesh_partition.cpp  test_ns.cpp  test_partition.cpp  test_petsc_jacobian.cpp  test_petsc_solvers.cpp  test_polytope.cpp  test_solvers_main.cpp  test_spacetime_utils.cpp  test_utils.cpp
