add_library(iceicle_fe segment_mesh.cpp mesh.cpp)
target_compile_features(iceicle_fe INTERFACE cxx_std_23)
target_link_libraries(iceicle_fe PUBLIC iceicle_util)
target_link_libraries(iceicle_fe PUBLIC nt_general)
target_link_libraries(iceicle_fe PUBLIC nt_tensor)
target_link_libraries(iceicle_fe PUBLIC nt_polynomial)
target_link_libraries(iceicle_fe PUBLIC nt_tmp)
target_link_libraries(iceicle_fe PUBLIC nt_geometry)
target_link_libraries(iceicle_fe PUBLIC ${MPI_C_LIBRARIES})
target_link_libraries(iceicle_fe PUBLIC ${MFEM_LIBRARIES})
target_link_libraries(iceicle_fe PUBLIC mdspan)
if(MPI_FOUND)
    target_compile_definitions(iceicle_fe PUBLIC ICEICLE_USE_MPI)
endif()
target_include_directories(iceicle_fe PUBLIC ${MFEM_INCLUDE_DIRS})
message("MFEM include dirs: ${MFEM_INCLUDE_DIRS}")
target_include_directories(iceicle_fe PUBLIC ${MPI_INCLUDE_PATH})
target_include_directories(iceicle_fe PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

if(ICEICLE_USE_OPENGL)
    target_link_libraries(iceicle_fe PUBLIC OpenGL::OpenGL)
    target_link_libraries(iceicle_fe PUBLIC OpenGL::GLU)
    target_link_libraries(iceicle_fe PUBLIC GLEW::glew)
    target_link_libraries(iceicle_fe PUBLIC glfw)
endif()

